# SocialMediaSentiments

./: README.md  main.py  package-lock.json  pyproject.toml
backend/: pyproject.toml
backend/api/: app.py  main.py
backend/api/social-mcp/: social-mcp.py
backend/api/social-mcp/fetchers/: reddit.py  x.py
backend/api/social-mcp/prompts/: improvement_suggestions.md  sentiment_analysis.md
frontend/: package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/components/chat/: chat-input.tsx  chat-message-list.tsx  chat-shell.tsx  chat-sidebar.tsx  message-bubble.tsx  tool-status-bubble.tsx
social-mcp/: social-mcp.py
social-mcp/fetchers/: reddit.py  youtube.py
social-mcp/prompts/: system_instructions.md
